--- a/WebApp/Views/Job/ViewJob.cshtml
+++ b/WebApp/Views/Job/ViewJob.cshtml
@@ -56,15 +56,7 @@
                                 </button>
 
                                 <button onclick="location.href='@Url.Action("GetApplication", "Application",
-                                        new {
-                                            id = ViewBag.ApplicationId,
-                                            sortBy = ViewBag.SortBy,
-                                            search = ViewBag.Search,
-                                            pageIndex = ViewBag.PageIndex,
-                                            filterByWorkSetup = ViewBag.FilterByWorkSetup,
-                                            filterByProgram = ViewBag.FilterByProgram,
-                                            filterByStatus = ViewBag.FilterByStatus
-                                        })'"
+                                        new { id = Model.ApplicationId })'"
                                         class="flex items-center justify-center rounded-lg px-4 py-2 transition-all bg-[#7A1515] hover:bg-[#991b1b] text-white">
                                     <i class="fa-solid fa-info-circle pr-1"></i> See Details
                                 </button>
