Change all references of UserPreferences to UserProfile

--- a/WebApp/Views/Shared/_Header.cshtml
+++ b/WebApp/Views/Shared/_Header.cshtml
@@ -52,7 +52,7 @@
                             <a href="@Url.Action("GetAllApplications", "Application")" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
                                 <i class="fa-solid fa-briefcase mr-2"></i>Applications
                             </a>
-                            <a href="@Url.Action("GetUserPreferences", "UserPreferences")" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
+                            <a href="@Url.Action("GetUserProfile", "UserProfile")" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
                                 <i class="fa fa-cog mr-2"></i>Settings
                             </a>
                             <a href="#" data-toggle="modal" data-target="#logoutModal" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
