--- a/WebApp/Views/UserProfile/_DisplayAllPreferences.cshtml
+++ b/WebApp/Views/UserProfile/_DisplayAllPreferences.cshtml
@@ -1,4 +1,4 @@
-﻿@model Services.ServiceModels.UserPreferencesViewModel
+﻿@model Services.ServiceModels.UserProfileViewModel
 
 <table class="table">
     <thead>
