--- a/WebApp/Views/UserProfile/_NotificationPreferences.cshtml
+++ b/WebApp/Views/UserProfile/_NotificationPreferences.cshtml
@@ -1,4 +1,4 @@
-﻿@model Services.ServiceModels.UserPreferencesViewModel
+﻿@model Services.ServiceModels.UserProfileViewModel
 
 <!-- Application Notifications Section -->
 <h5 class="mb-4 font-semibold text-gray-800">Application Notifications</h5>
